--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://timeminuta.vercel.app/" />
     <meta property="og:title" content="Minuta — time, beautifully spent" />
+    <meta property="og:site_name" content="Minuta" />
     <meta property="og:description" content="Minuta: time, beautifully spent" />
-    <meta property="og:image" content="/banner.png" />
+    <meta
+      property="og:image"
+      content="https://minutatime.vercel.app/banner.png"
+    />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://timeminuta.vercel.app/" />
     <meta property="twitter:title" content="Minuta — time, beautifully spent" />
@@ -25,7 +29,10 @@
       property="twitter:description"
       content="Minuta: time, beautifully spent"
     />
-    <meta property="twitter:image" content="/banner.png" />
+    <meta
+      property="twitter:image"
+      content="https://minutatime.vercel.app/banner.png"
+    />
   </head>
   <body>
     <div id="app" class="p-4 space-y-16"></div>
